--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/mysql2": "github:types/mysql2",
         "apollo-server-express": "^2.13.1",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "graphql": "^15.0.0",
-        "graphql-import-node": "0.0.4",
         "graphql-tools": "^5.0.0",
+        "merge-graphql-schemas": "^1.7.8",
+        "mysql2": "^2.1.0",
         "rimraf": "^3.0.2",
         "ts-node": "^8.10.1"
     },
